--- a/dltn-condao.html
+++ b/dltn-condao.html
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">Côn Đảo</h6>
-                    <h1 class="mb-4">Tour Côn Đảo 3 ngày 2 đêm</h1>
+                    <h1 class="mb-4">Tour Côn Đảo (3 ngày 2 đêm)</h1>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-10">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Khởi hành từ: TP
