--- a/dltn-hn-mochcau-phutho.html
+++ b/dltn-hn-mochcau-phutho.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">Hà Nội - Mộc Châu - Phú Thọ</h6>
-                    <h1 class="mb-4">Tour Khám Phá Cao Nguyên – Mây Trời – Đồi Chè</h1>
+                    <h1 class="mb-4">Tour Khám Phá Cao Nguyên – Mây Trời – Đồi Chè (4 ngày 3 đêm)</h1>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-10">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Khởi hành từ: TP. Hà Nội
