--- a/dltn-phuyen-binhdinh.html
+++ b/dltn-phuyen-binhdinh.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">Phú Yên - Bình Định</h6>
-                    <h1 class="mb-4">Tour Phú Yên - Bình Định 3 ngày 2 đêm</h1>
+                    <h1 class="mb-4">Tour Phú Yên - Bình Định (3 ngày 2 đêm)</h1>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-10">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Khởi hành từ: TP
