--- a/dltn.html
+++ b/dltn.html
@@ -92,11 +92,11 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="package-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/package-1.jpg" alt="">
+                            <img class="img-fluid" src="img/package-1.jpg" alt="" style="height: 320px;">
                         </div>
                         <div class="d-flex border-bottom">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Phú Yên</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/11, 21/12</small>
+                            <!-- <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Phú Yên</small> -->
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: -</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>4 ngày 3 đêm</small>
                         </div>
                         <div class="text-center p-4">
@@ -106,8 +106,8 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
                             </div>
+                            <p>Tour Khám Phá Cao Nguyên – Mây Trời – Đồi Chè</p>
                             <p>Hà Nội - Mộc Châu - Phú Thọ</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="dltn-hn-mochcau-phutho.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
@@ -116,14 +116,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="package-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/package-2.jpg" alt="">
+                            <img class="img-fluid" src="img/package-2.jpg" alt="" style="height: 320px;">
                         </div>
                         <div class="d-flex border-bottom">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Hà Nội</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/06/2025</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: 12/06/2025</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>3 ngày 2 đêm</small>
                         </div>
                         <div class="text-center p-4">
@@ -132,9 +131,8 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
                             </div>
+                            <p>Tour Phú Yên - Bình Định</p>
                             <p>Phú Yên - Bình Định</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="dltn-phuyen-binhdinh.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
@@ -143,14 +141,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="package-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/package-3.jpg" alt="">
+                            <img class="img-fluid" src="img/package-3.jpg" alt="" style="height: 320px;">
                         </div>
                         <div class="d-flex border-bottom">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Côn Đảo</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/06/2025</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: 12/06/2025</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>3 ngày 2 đêm</small>
                         </div>
                         <div class="text-center p-4">
@@ -159,9 +156,8 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
                             </div>
+                            <p>Tour Côn Đảo</p>
                             <p>Côn Đảo</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="dltn-condao.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
@@ -170,28 +166,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="package-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/package-3.jpg" alt="">
+                            <img class="img-fluid" src="img/package-4.jpg" alt="" style="height: 320px;">
                         </div>
                         <div class="d-flex border-bottom">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Côn Đảo</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/06/2025</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>3 ngày 2 đêm</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: 18/03/2025</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>2 ngày 1 đêm</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">3.390.000 VNĐ</h3>
+                            <h3 class="mb-0">3.349.000 VNĐ</h3>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
                             </div>
-                            <p>??????????????</p>
+                            <p>Tour Hồ Tràm</p>
+                            <p>Hồ Tràm</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <a href="dltn-condao.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="dltn-hotram.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
                                 <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
                             </div>
                         </div>
@@ -200,15 +194,14 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="package-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/package-3.jpg" alt="">
+                            <img class="img-fluid" src="img/package-5.jpg" alt="" style="height: 320px;">
                         </div>
                         <div class="d-flex border-bottom">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Côn Đảo</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/06/2025</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: -</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>3 ngày 2 đêm</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">3.390.000 VNĐ</h3>
+                            <h3 class="mb-0">8.930.000 VNĐ</h3>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
@@ -216,26 +209,26 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <p>???????????</p>
+                            <p>Tour cao cấp Đà Nẵng - Hội An</p>
+                            <p>Đà Nẵng - Hội An</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <a href="dltn-condao.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="dltn-dn-hoian.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
                                 <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="package-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/package-3.jpg" alt="">
+                            <img class="img-fluid" src="img/package-6.jpg" alt="" style="height: 320px;">
                         </div>
                         <div class="d-flex border-bottom">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Côn Đảo</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/06/2025</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>3 ngày 2 đêm</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: -</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>7 ngày 6 đêm</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">3.390.000 VNĐ</h3>
+                            <h3 class="mb-0">11.790.000 VNĐ</h3>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
@@ -243,9 +236,10 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <p>?????????</p>
+                            <p>Tour Miền Bắc</p>
+                            <p>HÀ NỘI – SAPA – FANSIPAN – YÊN TỬ – HẠ LONG – NINH BÌNH</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <a href="dltn-condao.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="dltn-mienbac.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
                                 <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
                             </div>
                         </div>
